--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.43.7",
-    "react-transition-group": "^4.4.5"
+    "react-hook-form": "^7.43.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
