--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
-    "react-hook-form": "^7.43.7"
+    "react-hook-form": "^7.43.7",
+    "react-use": "^17.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
