--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "framer-motion": "^10.9.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
     "react-hook-form": "^7.43.7",
-    "react-use": "^17.4.0"
+    "react-use": "^17.4.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
